# pdf-flattener

./: README.md  __init__.py  pyproject.toml
pdf_flattener/: cli.py
